--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
-README.MD:
+Readme.MD:
 <img src="https://raw.githubusercontent.com/gitUser/gitrepo/output/snake.svg" alt="Snake animation" />
 
-snake.yml:
+Sbake.yml:
 name: Generate snake animation
 
 
