--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -44,7 +44,7 @@ jobs:
 
         with:
 
-          github_user_name: Gabipsn11
+          github_user_name: ${{ github.repository_owner }}
 
           outputs: dist/snake.svg?palette=github-dark
 
